--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,13 @@ python:
   - "3.6"
   - "3.7"
 # command to install dependencies
+before_install:
+  - sudo apt-get install jq
+  - curl -LSs "$(curl -LSs https://api.github.com/repos/codacy/codacy-coverage-reporter/releases/latest | jq -r '.assets | map({name, browser_download_url} | select(.name | endswith(".jar"))) | .[0].browser_download_url')" -o codacy-coverage-reporter-assembly.jar
 before_script: pip install pytest
 script: python -m pytest
+after_success:
+  - java -jar codacy-coverage-reporter-assembly.jar report -l Java -r build/reports/jacoco/test/jacocoTestReport.xml
 branches:
   only:
     - master
