--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ python:
 # command to install dependencies
 before_script:
   - pip install -r requirements-test.txt
+  - python -m spacy download en_core_web_md
 script:
   - make coverage
   - make coverage-report
