--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,16 +1,30 @@
 site_name: Docs - Hover
-nav:
-    - Home: index.md
-    - API Reference: api.md
 theme:
     name: material
+    icon:
+      logo: material/alpha-h-box
+    favicon: images/favicon.png
+    font:
+      text: Roboto
+      code: Roboto Mono
+    features:
+      - navigation.expand
+      - toc.integrate
+      - search.suggest
+nav:
+    - Home: 'index.md'
+    - 'API Reference':
+        - 'hover.core.dataset': 'reference/core-dataset.md'
+        - 'hover.core.explorer': 'reference/core-explorer.md'
+        - 'hover.core.neural': 'reference/core-neural.md'
 plugins:
+- search:
 - mkdocstrings:
     default_handler: python
     handlers:
       python:
         rendering:
-          show_source: false
+          show_root_heading: false
+          show_source: true
     watch:
       - hover
-      - hover/core
