--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        python setup.py install
         pip install -r requirements-test.txt
         python -m spacy download en_core_web_md
     - name: Test and make coverage report
