--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -23,10 +23,17 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+    - name: Get installation dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install pip-tools
+        pip-compile
+        pip install -r requirements.txt
+    - name: Install hover
+      run: |
         python setup.py install
+    - name: Get testing dependencies
+      run: |
         pip install -r requirements-test.txt
         python -m spacy download en_core_web_md
     - name: Test and make coverage report
