Attempting to place testing deps setup in tox, and then integrate tox with GitHub Actions

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,33 @@
 [tox]
 envlist = py36,py37,py38
 
+[gh-actions]
+python =
+    3.6: py36
+    3.7: py37
+    3.8: py38
+
+[testenv]
+deps =
+    # standard testing
+    pytest
+    coverage
+    # text generation
+    faker
+    # vectorizers
+    spacy
+    # dimensionality reduction
+    umap-learn>=0.3.10
+    ivis[cpu]>=1.7
+    # exporting excel files
+    openpyxl
+commands =
+    # get extra dependencies that deps do not cover
+    python -m spacy download en_core_web_md
+    # run tests and get coverage report
+    coverage run --source=$(TEST_MODULE_PATH) -m pytest
+    coverage xml -o cobertura.xml
+
 [flake8]
 ignore =
     # black breaks these
