--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -10,7 +10,7 @@ on:
     branches: [ main ]
   schedule:
     - cron: "0 0 * * *"
-    
+
 jobs:
   build:
 
@@ -30,20 +30,16 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Get installation dependencies
       run: |
-        python -m pip install --upgrade pip 
+        python -m pip install --upgrade pip
         pip install pip-tools setuptools wheel cython numpy
         pip-compile
         pip install -r requirements.txt
     - name: Install hover
-      run: |
-        python setup.py install
+      run: python setup.py install
     - name: Get testing dependencies
-      run: |
-        pip install -r requirements-test.txt
-        python -m spacy download en_core_web_md
+      run: pip install tox tox-gh-actions
     - name: Test and make coverage report
-      run: |
-        make coverage
+      run: tox
     - name: Codacy Coverage Reporter
       uses: codacy/codacy-coverage-reporter-action@master
       with:
