Fixed a missing argument of coverage

--- a/tox.ini
+++ b/tox.ini
@@ -25,7 +25,7 @@ commands =
     # get extra dependencies that deps do not cover
     python -m spacy download en_core_web_md
     # run tests and get coverage report
-    coverage run --source=$(TEST_MODULE_PATH) -m pytest
+    coverage run --source=./hover -m pytest
     coverage xml -o cobertura.xml
 
 [flake8]
