--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36,py37,py38
+#envlist = py36,py37,py38
 
 [gh-actions]
 python =
@@ -7,7 +7,7 @@ python =
     3.7: py37
     3.8: py38
 
-[testenv]
+[testenv:test_api]
 deps =
     # standard testing
     pytest
@@ -21,12 +21,25 @@ deps =
     ivis[cpu]>=1.7
     # exporting excel files
     openpyxl
+
 commands =
     # get extra dependencies that deps do not cover
     python -m spacy download en_core_web_md
     # run tests and get coverage report
     coverage run --source=./hover -m pytest
     coverage xml -o cobertura.xml
+
+[testenv:publish]
+allowlist_externals =
+    rm
+deps =
+    twine
+
+commands =
+    python setup.py sdist bdist_wheel
+    twine check dist/*
+    twine upload dist/*
+    rm -rf build dist hover.egg-info
 
 [flake8]
 ignore =
