--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,6 +19,8 @@ theme:
 
 nav:
     - Home: 'index.md'
+    - 'Tutorial':
+        - 'Fundamentals': 'tutorial/t0-fundamentals.md'
     - 'API Reference':
         - 'hover.recipes': 'reference/recipes.md'
         - 'hover.core.dataset': 'reference/core-dataset.md'
@@ -29,6 +31,7 @@ markdown_extensions:
   - admonition
   - markdown_include.include
   - pymdownx.details
+  - pymdownx.emoji
   - pymdownx.superfences
 
 plugins:
