--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,7 +18,7 @@ theme:
       - search.suggest
 
 nav:
-    - Home: 'pages/index.md'
+    - Home: 'index.md'
     - 'Tutorial':
         - 'Fundamentals': 'pages/tutorial/t0-fundamentals.md'
     - 'API Reference':
