--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,6 +31,7 @@ nav:
 markdown_extensions:
   - admonition
   - markdown_include.include
+  - pymdownx.critic
   - pymdownx.details
   - pymdownx.emoji
   - pymdownx.superfences
