Update flake8 config

--- a/tox.ini
+++ b/tox.ini
@@ -46,6 +46,9 @@ ignore =
     # black breaks these
     E203,
     E501,
-    W503
+    W503,
+per-file-ignores =
+    # imported but unused
+    __init__.py: F401
 exclude = .git,__pycache__,docs,build,dist
 max-complexity = 10
