--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,8 +22,9 @@ nav:
     - 'Tutorial':
         - 'Quickstart': 'pages/tutorial/t0-quickstart.md'
         - 'Active Learning': 'pages/tutorial/t1-active-learning.md'
+        - 'Embedding Bokeh': 'pages/tutorial/t2-bokeh-app.md'
     - 'Topics':
-        - 'Dataset': 'pages/topics/dataset.md'
+        - 'Dataset (under work)': 'pages/topics/dataset.md'
     - 'API Reference':
         - 'hover.recipes': 'pages/reference/recipes.md'
         - 'hover.core.dataset': 'pages/reference/core-dataset.md'
