Modified docs navigation bar; IN PROGRESS: reformatting docstrings, moving one-line descriptions and creating args tables

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,8 +14,9 @@ theme:
       code: Roboto Mono
     features:
       - navigation.expand
-      - toc.integrate
+      - navigation.tabs
       - search.suggest
+      - toc.integrate
 
 nav:
     - Home: 'index.md'
