--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,6 +4,7 @@ pre-commit
 # documentation
 mkdocs
 mkdocs-material
+mkdocs-macros-plugin
 mkdocstrings
 markdown-include
 # interactive development
