Docs: started a multiple-views topic page

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,8 +26,9 @@ nav:
         - 'Server Options': 'pages/tutorial/t2-bokeh-app.md'
     - 'Topics':
         #- 'Why Hover': 'pages/topics/what-hover-is.md'
-        - 'Managing Data (under work)': 'pages/topics/managing-data.md' # ideas & best practices around SupervisableDataset
+        - 'Managing Data (under work)': 'pages/topics/managing-data.md' # jupyter illustration of ideas & best practices around SupervisableDataset
         - 'Active Learning (under work)': 'pages/topics/active-learning.md' # video walkthrough showcasing the active_learning recipe
+        - 'Multiple Views (under work)': 'pages/topics/multiple-views.md' # video walkthrough showcasing the snorkel_crosscheck recipe
         - 'Distant Supervision (under work)': 'pages/topics/distant-supervision.md' # video walkthrough showcasing the snorkel_crosscheck recipe
         #- 'Customized Usage':
         #    - 'API Levels': 'pages/topics/api-levels.md' # discuss the interaction between recipe / dataset / explorer
