CI change: corrected cache retrieval

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -51,7 +51,7 @@ jobs:
         source env/bin/activate
 
     - name: Get installation dependencies
-      if: steps.site-packages-cache.outputs.cache-hit != 'true'
+      if: steps.find-venv.outputs.cache-hit != 'true'
       run: |
         python -m pip install --upgrade pip
         # dependencies that could be involved in builds
@@ -66,7 +66,7 @@ jobs:
       run: python setup.py install
 
     - name: Get testing dependencies
-      if: steps.site-packages-cache.outputs.cache-hit != 'true'
+      if: steps.find-venv.outputs.cache-hit != 'true'
       run: pip install tox tox-gh-actions
 
     - name: Test and make coverage report
