--- a/.github/workflows/source-test.yml
+++ b/.github/workflows/source-test.yml
@@ -31,7 +31,7 @@ jobs:
       uses: actions/cache@v2
       with:
         path: env
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/setup.py') }}
+        key: ${{ runner.os }}-venv-${{ hashFiles('**/setup.py') }}
         restore-keys: |
           ${{ runner.os }}-venv-
           
