--- a/.github/workflows/source-test.yml
+++ b/.github/workflows/source-test.yml
@@ -16,8 +16,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.6', '3.7', '3.8', '3.9', '3.6.11', '3.7.10', '3.8.8']
-        os: [ubuntu-latest]
+        python-version: ['3.6', '3.7', '3.8', '3.9']
+        os: [ubuntu-latest, macos-10.15]
 
     steps:
     - uses: actions/checkout@v2
@@ -25,22 +25,22 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-  
+
     - name: Find cached env
       id: find-venv
       uses: actions/cache@v2
       with:
         path: env
-        key: ${{ runner.os }}-venv-${{ hashFiles('**/setup.py') }}
+        key: ${{ runner.os }}-${{ runner.python-version }}-venv-${{ hashFiles('**/setup.py') }}
         restore-keys: |
-          ${{ runner.os }}-venv-
-          
+          ${{ runner.os }}-${{ runner.python-version }}-venv-
+
     - name: Create env
       id: create-venv
       if: steps.find-venv.outputs.cache-hit != 'true'
       run: |
         python -m venv env
-        
+
     - name: Get mandatory dependencies
       if: steps.find-venv.outputs.cache-hit != 'true'
       run: |
@@ -68,4 +68,3 @@ jobs:
       with:
         project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
         coverage-reports: cobertura.xml
-
