--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-#envlist = py36,py37,py38
+#envlist = py36,py37,py38,py39
 
 [gh-actions]
 python =
@@ -9,6 +9,7 @@ python =
     3.7.10: py37
     3.8: py38
     3.8.8: py38
+    3.9: py39
 
 [testenv:test_api]
 deps =
