--- a/.github/workflows/source-test.yml
+++ b/.github/workflows/source-test.yml
@@ -1,7 +1,7 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
+# This workflow will install Python dependencies and run tests on the source code.
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python application
+name: Source test
 
 on:
   push:
