Changed snorkel to an optional dependency

--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,8 @@ deps =
     # dimensionality reduction
     umap-learn>=0.3.10
     ivis[cpu]>=1.7
+    # distant supervision
+    snorkel>=0.9.3
     # exporting excel files
     openpyxl
 
