Edited cache key to manually clear invalid cache

--- a/.github/workflows/source-test.yml
+++ b/.github/workflows/source-test.yml
@@ -31,9 +31,9 @@ jobs:
       uses: actions/cache@v2
       with:
         path: env
-        key: ${{ runner.os }}-${{ runner.python-version }}-env-${{ hashFiles('**/setup.py') }}
+        key: ${{ runner.os }}-${{ runner.python-version }}-cachedenv-${{ hashFiles('**/setup.py') }}
         restore-keys: |
-          ${{ runner.os }}-${{ runner.python-version }}-env-
+          ${{ runner.os }}-${{ runner.python-version }}-cachedenv-
 
     - name: Create env
       id: create-venv
