--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.6', '3.7', '3.8', '3.9', '3.6.11', '3.7.10', '3.8.8']
+        python-version: ['3.7', '3.8', '3.9', '3.7.10', '3.8.8']
         os: [ubuntu-latest]
 
     steps:
