--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,8 @@
 [tox]
-#envlist = py36,py37,py38,py39
+#envlist = py37,py38,py39
 
 [gh-actions]
 python =
-    3.6: py36
-    3.6.11: py36
     3.7: py37
     3.7.10: py37
     3.8: py38
