Modified source test Python/OS matrix

--- a/.github/workflows/source-test.yml
+++ b/.github/workflows/source-test.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies and run tests on the source code.
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Source test
+name: Source Test
 
 on:
   push:
@@ -16,8 +16,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.6', '3.7', '3.8', '3.9']
-        os: [ubuntu-latest, macos-10.15]
+        python-version: ['3.7', '3.8', '3.9']
+        os: [ubuntu-latest, macos-latest]
 
     steps:
     - uses: actions/checkout@v2
