--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,11 +1,12 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python package
+name: Python Package
 
 on:
   schedule:
     - cron: "0 0 * * 1,4"
+  workflow_dispatch:
 
 jobs:
   build:
@@ -14,7 +15,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.7', '3.8', '3.9', '3.7.10', '3.8.8', '3.9.7']
+        # these versions have worked before: 3.7.10, 3.8.8, 3.9.7
+        python-version: ['3.7', '3.8', '3.9']
         os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
