--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -69,3 +69,8 @@ plugins:
             show_source: true
       watch:
         - hover
+
+extra:
+  analytics:
+    provider: google
+    property: UA-211167044-1
