--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -17,7 +17,7 @@ jobs:
       matrix:
         # these versions have worked before: 3.7.10, 3.8.8, 3.9.7
         python-version: ['3.7', '3.8', '3.9']
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest]
 
     steps:
     - uses: actions/checkout@v2
@@ -41,16 +41,16 @@ jobs:
       run: |
         python -m venv env
 
-    - name: Get dependencies
-      if: steps.find-venv.outputs.cache-hit != 'true'
-      run: |
-        source env/bin/activate
-        python -m pip install --upgrade pip
-        # dependencies that could be involved in builds
-        pip install pip-tools setuptools wheel cython
-        # find dependencies based on setup.py
-        pip-compile
-        pip install -r requirements.txt
+    #- name: Get dependencies
+    #  if: steps.find-venv.outputs.cache-hit != 'true'
+    #  run: |
+    #    source env/bin/activate
+    #    python -m pip install --upgrade pip
+    #    # dependencies that could be involved in builds
+    #    pip install pip-tools setuptools wheel cython
+    #    # find dependencies based on setup.py
+    #    pip-compile
+    #    pip install -r requirements.txt
 
     - name: Install hover
       run: |
