--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -17,7 +17,7 @@ jobs:
       matrix:
         # these versions have worked before: 3.7.10, 3.8.8, 3.9.7
         python-version: ['3.7', '3.8', '3.9']
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
     - uses: actions/checkout@v2
@@ -53,6 +53,15 @@ jobs:
     #    pip install -r requirements.txt
 
     - name: Install hover
+      if: matrix.os == 'ubuntu-latest'
+      shell: bash
       run: |
-        source env/bin/activate
+        if [ "$RUNNER_OS" == "Linux" ] || [ "$RUNNER_OS" == "macOS" ]; then
+             source env/bin/activate
+        elif [ "$RUNNER_OS" == "Windows" ]; then
+             .\env\Scripts\activate
+        else
+             echo "$RUNNER_OS not supported"
+             exit 1
+        fi
         python setup.py install
