--- a/.github/workflows/source-test.yml
+++ b/.github/workflows/source-test.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies and run tests on the source code.
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Source Test
+name: Ubuntu Source Test
 
 on:
   push:
@@ -17,7 +17,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ['3.7', '3.8', '3.9']
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest]
 
     steps:
     - uses: actions/checkout@v2
