Tox: upgrade dependencies when testing

--- a/tox.ini
+++ b/tox.ini
@@ -33,6 +33,9 @@ commands =
     coverage run --source=./hover -m pytest
     coverage xml -o cobertura.xml
 
+install_command =
+    python -m pip install --upgrade {opts} {packages}
+
 [testenv:publish]
 allowlist_externals =
     rm
