Added a tox target for installing hover from source

--- a/tox.ini
+++ b/tox.ini
@@ -36,6 +36,10 @@ commands =
 install_command =
     python -m pip install --upgrade {opts} {packages}
 
+[testenv:install]
+commands =
+    python setup.py install
+
 [testenv:publish]
 allowlist_externals =
     rm
